# controllers/dashboardController/dashboardController.go
@@ -5,6 +5,7 @@ import (
 	"hms-backend/dto"
 	"hms-backend/usecases/dashboardUseCase"
 	"net/http"
+	"strconv"
 )
 
 type dashboardController struct {
@@ -19,6 +20,25 @@ func New(srv dashboardUseCase.DashboardUseCase) *dashboardController {
 
 func (ctrl *dashboardController) GetDataDashboardWeb(c echo.Context) error {
 	res, err := ctrl.usecase.GetDataDashboardWeb()
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, dto.Response{
+			Status:  http.StatusBadRequest,
+			Message: err.Error(),
+			Data:    nil,
+		})
+	}
+
+	return c.JSON(http.StatusOK, dto.Response{
+		Status:  http.StatusOK,
+		Message: "success get data",
+		Data:    res,
+	})
+}
+
+func (ctrl *dashboardController) GetDataDashboardMobile(c echo.Context) error {
+	doctorId, _ := strconv.ParseInt(c.Param("doctor_id"), 16, 64)
+
+	res, err := ctrl.usecase.GetDataDashboardMobile(uint(doctorId))
 	if err != nil {
 		return c.JSON(http.StatusBadRequest, dto.Response{
 			Status:  http.StatusBadRequest,
